# RustyParrot

./: .env.template  .gitignore  Cargo.toml  README.md  rustfmt.toml
migrations/: 20240129192556_initial_migration.sql
src/: lib.rs  main.rs
src/commands/: mod.rs  music.rs  ping.rs
