[package]
name = "rusty-parrot-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serenity = { version = "0.11.6", features = ["client", "gateway", "http", "model", "collector"] }
slashy = "0.1.2"
songbird = "0.3.2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[build]
rustflags = ["-A", "clippy::non_camel_case_types"]
