[package]
name = "rusty-parrot"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12", features = ["client", "standard_framework", "gateway", "http", "model", "collector", "voice"] }
songbird = { version = "0.4",features = ["builtin-queue"] }
symphonia = { version = "0.5.2",features = ["aac", "mp3", "isomp4", "alac"] }
reqwest = "0.11"
futures = "0.3.29"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
